force-app/main/default/objects/Merchant_Special_Process__c/Merchant_Special_Process__c.object-meta.xml
<CustomObject>
    <description>This Object will allow to handle the Merchant special processes (N.M.O. Xboarder, Follow-up, Debit note and Exit).</description>
    <label>Merchant Special Process</label>
    <nameField>
        <displayFormat>MSP-{0000000000}</displayFormat>
        <label>Merchant Special Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Special Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>