force-app/main/default/objects/Merchant_Special_Process__c/fields/Account_Manager_Need__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Need__c</fullName>
    <label>Account Manager Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes.</fullName>
            </value>
            <value>
                <fullName>No, BackWatch recommended</fullName>
            </value>
            <value>
                <fullName>No, Selfcare recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>