force-app/main/default/objects/Merchant_Special_Process__c/fields/Account_Manager_Need_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Need_Rationale__c</fullName>
    <label>Account Manager Need Rationale</label>
    <length>150</length>
    <type>Text</type>
</CustomField>