force-app/main/default/objects/Merchant_Special_Process__c/fields/Actual_Buyback_Limitation__c.field-meta.xml
<CustomField>
    <fullName>Actual_Buyback_Limitation__c</fullName>
    <formula>Merchant__r.Buyback_limitation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Buyback Limitation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>