force-app/main/default/objects/Merchant_Special_Process__c/fields/Actual_Sales_limitation__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_limitation__c</fullName>
    <formula>Merchant__r.Sales_limitation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Sales limitation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>