force-app/main/default/objects/Merchant_Special_Process__c/fields/Additional_notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_notes__c</fullName>
    <label>Additional notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>