force-app/main/default/objects/Merchant_Special_Process__c/fields/After_Sales_Services_Languages__c.field-meta.xml
<CustomField>
    <fullName>After_Sales_Services_Languages__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>What languages ​​does the merchants customer service speak fluently?</inlineHelpText>
    <label>After-Sales Services Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>