force-app/main/default/objects/Merchant_Special_Process__c/fields/After_Sales_Services_Provider__c.field-meta.xml
<CustomField>
    <fullName>After_Sales_Services_Provider__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Who is managing merchants after-sales services (if it is outsourced)?</inlineHelpText>
    <label>After-Sales Services Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arvato (Majorel)</fullName>
            </value>
            <value>
                <fullName>Sitel Group</fullName>
            </value>
            <value>
                <fullName>Web Help</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>