force-app/main/default/objects/Merchant_Special_Process__c/fields/Annual_E_Com_Revenues_on_Refurbished__c.field-meta.xml
<CustomField>
    <fullName>Annual_E_Com_Revenues_on_Refurbished__c</fullName>
    <label>Annual E-Com Revenues on Refurbished</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>