force-app/main/default/objects/Merchant_Special_Process__c/fields/Back_Care_OK__c.field-meta.xml
<CustomField>
    <fullName>Back_Care_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Care OK</label>
    <type>Checkbox</type>
</CustomField>