force-app/main/default/objects/Merchant_Special_Process__c/fields/Backmarket_API_integration__c.field-meta.xml
<CustomField>
    <fullName>Backmarket_API_integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backmarket API Integration</label>
    <type>Checkbox</type>
</CustomField>