force-app/main/default/objects/Merchant_Special_Process__c/fields/Bad_reviews_related_to_delivery_issues__c.field-meta.xml
<CustomField>
    <fullName>Bad_reviews_related_to_delivery_issues__c</fullName>
    <label>Bad reviews related to delivery issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>