force-app/main/default/objects/Merchant_Special_Process__c/fields/Behavior_spotted__c.field-meta.xml
<CustomField>
    <fullName>Behavior_spotted__c</fullName>
    <label>Behavior spotted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not answering SAV</fullName>
            </value>
            <value>
                <fullName>Not answering BM</fullName>
            </value>
            <value>
                <fullName>Bad Behavior with clients</fullName>
            </value>
            <value>
                <fullName>Bad Behavior with BM</fullName>
            </value>
            <value>
                <fullName>Not involved in action plans</fullName>
            </value>
            <value>
                <fullName>Bad Mystery Orders</fullName>
            </value>
            <value>
                <fullName>Refund policy</fullName>
            </value>
            <value>
                <fullName>Shipping policy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>