force-app/main/default/objects/Merchant_Special_Process__c/fields/BizDev__c.field-meta.xml
<CustomField>
    <fullName>BizDev__c</fullName>
    <formula>Merchant__r.BizDev__r.FirstName + &quot; &quot; + Merchant__r.BizDev__r.LastName</formula>
    <label>BizDev</label>
    <type>Text</type>
</CustomField>