force-app/main/default/objects/Merchant_Special_Process__c/fields/BizDev_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>BizDev_for_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field created to enable adding BizDev as approver in the Debit Note end date Reached approval process.</description>
    <label>BizDev for Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchant_Special_Processes3</relationshipName>
    <type>Lookup</type>
</CustomField>