force-app/main/default/objects/Merchant_Special_Process__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <inlineHelpText>What brands would you sell on Back Market?</inlineHelpText>
    <label>Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>