force-app/main/default/objects/Merchant_Special_Process__c/fields/Buyback_KPI_concerned__c.field-meta.xml
<CustomField>
    <fullName>Buyback_KPI_concerned__c</fullName>
    <label>Buyback KPI concerned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_Buyback_KPI</valueSetName>
    </valueSet>
</CustomField>