force-app/main/default/objects/Merchant_Special_Process__c/fields/Buyback_Reason_for_Exit__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Reason_for_Exit__c</fullName>
    <label>Buyback Reason for Exit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment issue</fullName>
            </value>
            <value>
                <fullName>Failed NMO</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Change activity</fullName>
            </value>
            <value>
                <fullName>Chargeback Invoice</fullName>
            </value>
            <value>
                <fullName>New T&amp;C unsigned</fullName>
            </value>
            <value>
                <fullName>Severe miscounduct</fullName>
            </value>
            <value>
                <fullName>Account merging</fullName>
            </value>
            <value>
                <fullName>No activity</fullName>
            </value>
            <value>
                <fullName>Lack of cooperation</fullName>
            </value>
            <value>
                <fullName>Failed Follow-up</fullName>
            </value>
            <value>
                <fullName>Exited on Sales</fullName>
            </value>
            <value>
                <fullName>Not live on Sales part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>