force-app/main/default/objects/Merchant_Special_Process__c/fields/Buyback_Reason_to_refuse_the_FU_3__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Reason_to_refuse_the_FU_3__c</fullName>
    <label>Buyback - Reason to refuse the FU 3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buyback_Reason_to_refuse_the_FU</valueSetName>
    </valueSet>
</CustomField>