force-app/main/default/objects/Merchant_Special_Process__c/fields/Carriers__c.field-meta.xml
<CustomField>
    <fullName>Carriers__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Does the merchant have carrier contracts to ship its products to Back Market?</inlineHelpText>
    <label>Carriers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>