force-app/main/default/objects/Merchant_Special_Process__c/fields/Com_Language__c.field-meta.xml
<CustomField>
    <fullName>Com_Language__c</fullName>
    <label>Com Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>