force-app/main/default/objects/Merchant_Special_Process__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <inlineHelpText>How do you plan to manage your SKUs on your Back Market back-office?</inlineHelpText>
    <label>Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Connection_Picklist</valueSetName>
    </valueSet>
</CustomField>