force-app/main/default/objects/Merchant_Special_Process__c/fields/Cost_Structure__c.field-meta.xml
<CustomField>
    <fullName>Cost_Structure__c</fullName>
    <label>Cost Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Capacity</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>