force-app/main/default/objects/Merchant_Special_Process__c/fields/Countries_Already_Selling_In__c.field-meta.xml
<CustomField>
    <fullName>Countries_Already_Selling_In__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Which countries does the merchant already sell in?</inlineHelpText>
    <label>Countries Already Selling In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>