force-app/main/default/objects/Merchant_Special_Process__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>for NMO Xborders : Country of TC - to display in Kanban view</description>
    <formula>TEXT(Targeted_Country__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>