force-app/main/default/objects/Merchant_Special_Process__c/fields/current_BD__c.field-meta.xml
<CustomField>
    <fullName>current_BD__c</fullName>
    <formula>IF( BizDev__c  = $User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>current_BD</label>
    <type>Text</type>
</CustomField>