force-app/main/default/objects/Merchant_Special_Process__c/fields/Current_limitation__c.field-meta.xml
<CustomField>
    <fullName>Current_limitation__c</fullName>
    <label>Current limitation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>