force-app/main/default/objects/Merchant_Special_Process__c/fields/Current_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_Manager__c</fullName>
    <formula>If( Customer_Champion_Manager__c = $User.Id ,&quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current-Manager</label>
    <type>Text</type>
</CustomField>