force-app/main/default/objects/Merchant_Special_Process__c/fields/Customer_Champion_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Champion_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Champion Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Merchant_Special_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>