force-app/main/default/objects/Merchant_Special_Process__c/fields/Daily_Potential_Sales__c.field-meta.xml
<CustomField>
    <fullName>Daily_Potential_Sales__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>How many sales can the merchant do on Back Market each day?</inlineHelpText>
    <label># of Daily potential sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-300</fullName>
            </value>
            <value>
                <fullName>300-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>&gt; 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>