force-app/main/default/objects/Merchant_Special_Process__c/fields/Date_End_of_Exit__c.field-meta.xml
<CustomField>
    <fullName>Date_End_of_Exit__c</fullName>
    <description>Calculate the End date of Exit Process.
It is the last day of next month of field &quot;Has_Entered_in_Progress_On__c&quot;</description>
    <formula>if( NOT(ISNULL( Date_end_of_Exit_test__c )),Date_end_of_Exit_test__c, DATE( Year(ADDMONTHS( Has_Entered_in_Progress_On__c ,2)),MONTH( ADDMONTHS(Has_Entered_in_Progress_On__c,2)),1 ) -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date End of Exit</label>
    <type>Date</type>
</CustomField>