force-app/main/default/objects/Merchant_Special_Process__c/fields/Date_end_of_Exit_test__c.field-meta.xml
<CustomField>
    <fullName>Date_end_of_Exit_test__c</fullName>
    <label>Date end of Exit test</label>
    <type>Date</type>
</CustomField>