force-app/main/default/objects/Merchant_Special_Process__c/fields/Date_test_Phase_1_to_2__c.field-meta.xml
<CustomField>
    <fullName>Date_test_Phase_1_to_2__c</fullName>
    <label>Date test Appro. Phase 2</label>
    <type>DateTime</type>
</CustomField>