force-app/main/default/objects/Merchant_Special_Process__c/fields/Debit_note__c.field-meta.xml
<CustomField>
    <fullName>Debit_note__c</fullName>
    <formula>Merchant__r.Debit_note__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>