force-app/main/default/objects/Merchant_Special_Process__c/fields/Diagnostic_Type__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Type__c</fullName>
    <label>Diagnostic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>