force-app/main/default/objects/Merchant_Special_Process__c/fields/Disable_automatic_email__c.field-meta.xml
<CustomField>
    <fullName>Disable_automatic_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable automatic email</label>
    <type>Checkbox</type>
</CustomField>