force-app/main/default/objects/Merchant_Special_Process__c/fields/End_of_notice_period__c.field-meta.xml
<CustomField>
    <fullName>End_of_notice_period__c</fullName>
    <label>End of notice period</label>
    <type>Date</type>
</CustomField>