force-app/main/default/objects/Merchant_Special_Process__c/fields/Entry_Rate_3__c.field-meta.xml
<CustomField>
    <fullName>Entry_Rate_3__c</fullName>
    <label>Entry Rate 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>