force-app/main/default/objects/Merchant_Special_Process__c/fields/Exemption__c.field-meta.xml
<CustomField>
    <fullName>Exemption__c</fullName>
    <label>Exemption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>