force-app/main/default/objects/Merchant_Special_Process__c/fields/Exemption_approval__c.field-meta.xml
<CustomField>
    <fullName>Exemption_approval__c</fullName>
    <label>Exemption approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>