force-app/main/default/objects/Merchant_Special_Process__c/fields/Exemption_request__c.field-meta.xml
<CustomField>
    <fullName>Exemption_request__c</fullName>
    <label>Exemption request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DM fault (e.g. catalog, service, Parcel Lab, ...)</fullName>
            </value>
            <value>
                <fullName>Event external to BM / merchant / 3rd party provider (Storm, Brexit, ...)</fullName>
            </value>
            <value>
                <fullName>Action plan with KPI OK on a 2-week cohort</fullName>
            </value>
            <value>
                <fullName>Defective OK at the model or category level (on 100+ orders)</fullName>
            </value>
            <value>
                <fullName>Safety / Legal issue already properly handled by Merchant</fullName>
            </value>
            <value>
                <fullName>Service subscription in all countries where the rate is below the threshold</fullName>
                <label>Service subscription in all countries</label>
            </value>
            <value>
                <fullName>Duplicated Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>