force-app/main/default/objects/Merchant_Special_Process__c/fields/Exit_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Exit_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit email sent</label>
    <type>Checkbox</type>
</CustomField>