force-app/main/default/objects/Merchant_Special_Process__c/fields/Exit_sub_reason__c.field-meta.xml
<CustomField>
    <fullName>Exit_sub_reason__c</fullName>
    <label>Exit sub reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_for_exit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCBM</fullName>
            </value>
            <value>
                <fullName>Accessories Rate</fullName>
            </value>
            <value>
                <fullName>Cancellation Rate</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>Defective Rate</fullName>
            </value>
            <value>
                <fullName>Esthetic Rate</fullName>
            </value>
            <value>
                <fullName>Late Delivery Rate</fullName>
            </value>
            <value>
                <fullName>Late Response Rate</fullName>
            </value>
            <value>
                <fullName>Policy violation</fullName>
            </value>
            <value>
                <fullName>Billing / Payout</fullName>
            </value>
            <value>
                <fullName>Wrong Product Rate</fullName>
            </value>
            <value>
                <fullName>Untracked Orders Rate</fullName>
            </value>
            <value>
                <fullName>Buyback - Charter breaches</fullName>
            </value>
            <value>
                <fullName>Mystery Order</fullName>
                <label>Failed Mystery Order</label>
            </value>
            <value>
                <fullName>Debt</fullName>
            </value>
            <value>
                <fullName>Gross Fault / Fraud</fullName>
            </value>
            <value>
                <fullName>Invoicing Compliance</fullName>
            </value>
            <value>
                <fullName>Refusal of T&amp;Cs Modification</fullName>
            </value>
            <value>
                <fullName>Forced exit due to Inactivity</fullName>
            </value>
            <value>
                <fullName>BM Policies &amp; Fees (other than Billing / Payout &amp; CCBM)</fullName>
            </value>
            <value>
                <fullName>Buybox Competition</fullName>
            </value>
            <value>
                <fullName>Catalog Issue</fullName>
            </value>
            <value>
                <fullName>Charter Breaches</fullName>
            </value>
            <value>
                <fullName>Not staffed to sell on marketplaces</fullName>
            </value>
            <value>
                <fullName>Sourcing issues</fullName>
            </value>
            <value>
                <fullName>Buyback - Cancellation (Functional) rate</fullName>
            </value>
            <value>
                <fullName>Buyback - Counter-Proposal (Functional) rate</fullName>
            </value>
            <value>
                <fullName>Buyback - Counter-Proposal (Non Functional) rate</fullName>
            </value>
            <value>
                <fullName>Buyback Exit due to Sales Exit</fullName>
            </value>
            <value>
                <fullName>Buyback - Payment issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>