force-app/main/default/objects/Merchant_Special_Process__c/fields/Expired_draft__c.field-meta.xml
<CustomField>
    <fullName>Expired_draft__c</fullName>
    <formula>today() - Has_Begun_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># days in draft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>