force-app/main/default/objects/Merchant_Special_Process__c/fields/Explanation_4__c.field-meta.xml
<CustomField>
    <fullName>Explanation_4__c</fullName>
    <defaultValue>(&apos;Approve = &quot;In progress&quot; - You need to limit the merchant / Reject = &quot;Refused&quot; - The merchant will not be exited&apos;)</defaultValue>
    <label>From Draft to In Progress</label>
    <type>TextArea</type>
</CustomField>