force-app/main/default/objects/Merchant_Special_Process__c/fields/Extend_period_days__c.field-meta.xml
<CustomField>
    <fullName>Extend_period_days__c</fullName>
    <label>Extend period (# days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>