force-app/main/default/objects/Merchant_Special_Process__c/fields/Finance_comment__c.field-meta.xml
<CustomField>
    <fullName>Finance_comment__c</fullName>
    <label>Finance comment</label>
    <type>TextArea</type>
</CustomField>