force-app/main/default/objects/Merchant_Special_Process__c/fields/Follow_Up_Age__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Age__c</fullName>
    <description>A number of days that a merchant was in the follow-up.</description>
    <formula>IF( 

AND(

NOT(ISPICKVAL(Stage__c ,&quot;Failed&quot;)),
NOT(ISPICKVAL(Stage__c ,&quot;Saved&quot;)),
NOT(ISPICKVAL(Stage__c ,&quot;Refused&quot;)),
NOT(ISPICKVAL(Stage__c ,&quot;Draft&quot;)),
NOT(ISPICKVAL(Stage__c ,&quot;Done&quot;))),

TODAY()- Has_Begun_On__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow-Up Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>