force-app/main/default/objects/Merchant_Special_Process__c/fields/For_Test_Scheduled_Dates__c.field-meta.xml
<CustomField>
    <fullName>For_Test_Scheduled_Dates__c</fullName>
    <label>For Test Scheduled Dates</label>
    <type>DateTime</type>
</CustomField>