force-app/main/default/objects/Merchant_Special_Process__c/fields/Fulfillment_Country__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Country__c</fullName>
    <label>Fulfillment Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>