force-app/main/default/objects/Merchant_Special_Process__c/fields/Fulfillment_Provider__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Provider__c</fullName>
    <label>Fulfillment Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>