force-app/main/default/objects/Merchant_Special_Process__c/fields/Fulfillment_Region__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Region__c</fullName>
    <label>Fulfillment Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>European Union</fullName>
            </value>
            <value>
                <fullName>Europe but outside European Union</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>