force-app/main/default/objects/Merchant_Special_Process__c/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internally</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Need fulfillment solution</fullName>
            </value>
            <value>
                <fullName>Does not use fulfillment solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>