force-app/main/default/objects/Merchant_Special_Process__c/fields/Has_been_cancelled_on__c.field-meta.xml
<CustomField>
    <fullName>Has_been_cancelled_on__c</fullName>
    <label>Has been cancelled on</label>
    <type>Date</type>
</CustomField>