force-app/main/default/objects/Merchant_Special_Process__c/fields/Has_been_INPRO_since_30_days_or_more__c.field-meta.xml
<CustomField>
    <fullName>Has_been_INPRO_since_30_days_or_more__c</fullName>
    <formula>Has_Entered_in_Progress_On__c + 30 &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has been INPRO since 30 days or more</label>
    <type>Checkbox</type>
</CustomField>