force-app/main/default/objects/Merchant_Special_Process__c/fields/Has_Been_Refused_On__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Refused_On__c</fullName>
    <label>Has Been Refused On</label>
    <type>Date</type>
</CustomField>